[gd_scene load_steps=6 format=3 uid="uid://cgxsr8fpyhg5u"]

[ext_resource type="Script" uid="uid://bl06ldggypxj1" path="res://Scripts/main_menu.gd" id="1_853f1"]
[ext_resource type="FontFile" uid="uid://c3wxab6lenh62" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="1_tt5f1"]
[ext_resource type="Texture2D" uid="uid://put7sds7th33" path="res://Assets/sprites/47265.jpg" id="2_8saeu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ghw46"]
texture = ExtResource("2_8saeu")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bnhvo"]
bg_color = Color(0.309804, 0.690196, 0.105882, 0.964706)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_853f1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ghw46")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -332.0
offset_top = -197.0
offset_right = 333.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_tt5f1")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_bnhvo")
text = "Start"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 160

[node name="Level1" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tt5f1")
theme_override_font_sizes/font_size = 32
text = "Level 1"

[node name="Level2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tt5f1")
theme_override_font_sizes/font_size = 32
text = "Level 2"

[node name="Level3" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tt5f1")
theme_override_font_sizes/font_size = 32
text = "Level 3"

[node name="End" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_tt5f1")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_bnhvo")
text = "End
"

[node name="Heading" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -441.0
offset_top = 43.0
offset_right = 434.0
offset_bottom = 112.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_tt5f1")
theme_override_font_sizes/font_size = 50
text = "Knight Adventure 2D"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="VBoxContainer/End" to="." method="_on_end_pressed"]
